Bug 491630 - User-facing use of word "module" considered jargon?
Summary: User-facing use of word "module" considered jargon?
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.1.4
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2024-08-12 16:08 UTC by John Veness
Modified: 2024-08-12 19:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments
System Settings module mention (92.93 KB, image/png)
2024-08-12 16:08 UTC, John Veness
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Veness 2024-08-12 16:08:28 UTC
Created attachment 172547 [details]
System Settings module mention

SUMMARY
If you change a setting in one KCM, and click to navigate to another without first Applying, an error message appears that refers to "the current module". This use of the word "module" here seems a bit jargon-y to me, especially as (as far as I can see) they are not generally referred to as modules in the UI.

STEPS TO REPRODUCE
1. Open System Settings
2. Click on Mouse & Touchpad, Mouse
3. Change setting of Invert scroll direction
4. Don't click Apply
5. Click on Sound

OBSERVED RESULT
Error message appears saying "The settings of the current module have changed. Do you want to apply the changes or discard them?"

EXPECTED RESULT
Maybe "The settings on the current page have changed" or "The settings on this page have changed" would be better. But please let someone who is good at technical end-user writing take a look at this rather than just me! Also see the HIG https://develop.kde.org/hig/text_and_labels/

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240811
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.10.3-1-default (64-bit)
Graphics Platform: X11
Comment 1 Nate Graham 2024-08-12 18:53:04 UTC
Quite right.
Comment 2 Nate Graham 2024-08-12 19:00:04 UTC
Git commit f8032c0f8287c262ed77efc3587a18b947c2667c by Nate Graham.
Committed on 12/08/2024 at 18:58.
Pushed by ngraham into branch 'master'.

Rephrase "apply or discard changes" dialog according to the HIG

Use human-friendly vocabulary instead of jargon, and avoid the word
"you".
FIXED-IN: 6.2.0

M  +2    -2    app/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/f8032c0f8287c262ed77efc3587a18b947c2667c