Rephrase "apply or discard changes" dialog according to the HIG

Use human-friendly vocabulary instead of jargon, and avoid the word
"you".

BUG: 491630
FIXED-IN: 6.2.0